syntax = "proto3";
package racing;

option go_package = "/racing";

import "google/protobuf/timestamp.proto";

service Racing {
  // ListRaces will return a collection of all races.
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {}
  // GetRace returns a single race
  rpc GetRace(GetRaceRequest) returns (GetRaceResponse) {}
}

/* Requests/Responses */

message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
  repeated ListRacesRequestOrderBy order_by = 2;
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
enum VisibilityStatus {
  ALL = 0;
  VISIBLE = 1;
  HIDDEN = 2;
}
message ListRacesRequestFilter {
  repeated int64 meeting_ids = 1;
  VisibilityStatus visibility_status = 2;
}

// Order by for listing races
enum OrderByDirection {
  ASC = 0;
  DESC = 1;
}
message ListRacesRequestOrderBy {
  string field_name = 1;
  OrderByDirection direction = 2;
}

// Request for GetRace
message GetRaceRequest {
  // "v1/race/1"
  int64 id = 1;
}

// Response to GetRace call
message GetRaceResponse {
  Race race = 1;
}

/* Resources */

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // Visible represents whether or not the race is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
  // Status based on the advertised_start_time
  string status = 7;
}

